--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ deps
 .rebar3
 _build/
 _checkouts/
+
+# Intellij
+######################
+.idea/
+*.iml
+*.iws
+*.ipr
+*.ids
+*.orig
+classes/
+out/
